<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_siswa" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikdua" />

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namalengkap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/harga" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikdua" />

        <EditText
            android:id="@+id/edt_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>
    <ProgressBar
        android:id="@+id/pd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <Button
            android:id="@+id/selectImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectimage" />
        <Button
            android:id="@+id/btn_insertdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/bgbtn3"
            android:text="@string/save" />



    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true" />
</LinearLayout>
