<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <ImageView
        android:layout_marginBottom="50dp"
        android:layout_marginTop="25dp"
        android:id="@+id/ivFoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_siswa" />


        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikdua" />

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namalengkap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/harga" />

        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikdua" />

        <EditText
            android:id="@+id/edt_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        >



        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"
            android:text="@string/update"
          />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnhapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:text="@string/hapus"
            />


    </LinearLayout>



</LinearLayout>
